--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,12 @@ html {
 3. Màu sắc
 4. Kiểu dáng (kiểu chữ, hình tròn, vuông,...)
  */
+.clear {
+  clear: both;
+}
+.text-white {
+  color: white !important;
+}
 #main {
 }
 #header {
@@ -27,10 +33,9 @@ html {
   right: 0;
   height: 46px;
   background-color: black;
-  z-index: 1 ;
-  
+  z-index: 1;
 }
-#nav{
+#nav {
   display: inline-block;
 }
 #nav,
@@ -54,7 +59,7 @@ html {
   padding: 0 24px;
   display: block;
 }
-#nav li:hover .subnav{
+#nav li:hover .subnav {
   display: block;
 }
 #nav .subnav li:hover a,
@@ -63,13 +68,13 @@ html {
   background-color: #ccc;
 }
 #nav .subnav {
-    display: none; 
-   min-width: 160px;
+  display: none;
+  min-width: 160px;
   position: absolute;
   top: 100%;
   left: 0;
   background-color: white;
-  box-shadow: 0 0 10px black ;
+  box-shadow: 0 0 10px black;
 }
 #nav .subnav a {
   color: black;
@@ -83,43 +88,115 @@ html {
 #nav-arrow-down {
   font-size: 14px;
 }
-#header .search-btn{
+#header .search-btn {
   float: right;
   padding: 0 21px;
-
 }
-#header .search-btn:hover{
+#header .search-btn:hover {
   background-color: #f44336;
   cursor: pointer;
 }
-#header .search-icon{
-  color : white;
+#header .search-icon {
+  color: white;
   font-size: 20px;
   line-height: 46px;
-
 }
 #slider {
   position: relative;
   margin-top: 46px;
   padding-top: 50%;
-  background: url("/hello_git/assets/img/slider/slider1.jpg")  top center  / cover no-repeat;
+  background: url("/html_css/w3_band/assets/img/slider/slider1.jpg") top center /
+    cover no-repeat;
 }
-#slider .text-content{
-position: absolute;
-bottom: 47px;
-width: 100% ;
-color: white;
-text-align: center;
+#slider .text-content {
+  position: absolute;
+  bottom: 47px;
+  width: 100%;
+  color: white;
+  text-align: center;
 }
-#slider .text-heading{
-font-weight: 500;
-font-size: 24px;
+#slider .text-heading {
+  font-weight: 500;
+  font-size: 24px;
 }
-#slider .text-description{
-margin-top: 25px;
-font-size: 15px;
+#slider .text-description {
+  margin-top: 25px;
+  font-size: 15px;
 }
 #content {
 }
+#content .content-section {
+  width: 800px;
+  padding: 64px 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+#content .section-heading {
+  font-weight: 500;
+  font-size: 30px;
+  text-align: center;
+  letter-spacing: 4px;
+}
+#content .section-sub-heading {
+  font-size: 15px;
+  margin-top: 25px;
+  text-align: center;
+  font-style: italic;
+  opacity: 0.6;
+}
+#content .about-text {
+  margin-top: 25px;
+  text-align: justify;
+  line-height: 1.4;
+}
+#content .member-list {
+  margin-top: 48px;
+}
+#content .member-item {
+  float: left;
+  width: 33.33333%;
+  text-align: center;
+}
+#content .member-name {
+  font-size: 15px;
+}
+#content .member-img {
+  width: 154px;
+  margin-top: 15px;
+  border-radius: 4px;
+}
+/* Tour section */
+.tour-section {
+  background-color: black;
+}
+.ticket-list {
+  background-color: white;
+  margin-top: 40px;
+  list-style: none;
+}
+.ticket-list li {
+  color: #757575;
+  font-size: 15px;
+  padding: 11px 16px;
+  border-bottom: 1px solid #ddd;
+}
+.ticket-list .sold-out {
+  background-color: #f44336;
+  color: white;
+  padding: 3px 4px;
+  margin-left: 16px;
+}
+.ticket-list .quantity {
+  float: right;
+  width: 24px;
+  height: 24px;
+  background: #000;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 24px;
+  margin-top: -3px;
+}
+
 #footer {
 }
