--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ html {
   position: relative;
   margin-top: 46px;
   padding-top: 50%;
-  background: url("/html_css/w3_band/assets/img/slider/slider1.jpg") top center /
+  background: url("/hello_git/assets/img/slider/slider1.jpg") top center /
     cover no-repeat;
 }
 #slider .text-content {
@@ -197,6 +197,101 @@ html {
   line-height: 24px;
   margin-top: -3px;
 }
+/* Places */
+.place-list{
+  margin: 32px -8px 0;
+  padding-bottom: 48px;
+  
+}
+.place-item{
+  float: left;
+  width: 33.33333%;
+  padding: 0 8px;
+}
+.place-img{
+  width: 100%;
+  display: block;
+
+}
+.place-img:hover{
+  opacity: 0.6;
+}
+.place-body{
+  font-size: 15px;
+  background-color: white;
+  padding: 16px;
+
+}
+.place-heading{
+  font-weight: 600;
+  
+
+}
+.place-time{
+   margin-top: 15px;
+   color: #757575;
+}
+.place-desc{
+  margin-top: 15px;
+  line-height: 1.4;
+}
+.place-buy-btn{
+  color: #fff;
+  background-color: #000;
+  text-decoration: none;
+  padding: 11px 16px;
+  display: inline-block;
+  margin-top: 15px;
+}
+.place-buy-btn:hover{
+color: #000;
+background-color: #ccc;
+}
+
 
 #footer {
+}
+.modal{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal-container {
+  background-color: #fff;
+  width: 900px;
+  min-height: 200px;
+  position: relative;
+}
+.modal-header{
+  background:#009688;
+  height: 130px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: #fff;
+}
+.modal-heading-icon{
+  margin-right:  16px; ;
+}
+.modal-close{
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #fff;
+  padding: 12px;
+  cursor: pointer;
+  opacity: 0.8;
+}
+.modal-close:hover{
+  opacity: 1;
+}
+.modal-body{
+  padding: 16px;
 }
