--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,8 +105,7 @@ html {
   position: relative;
   margin-top: 46px;
   padding-top: 50%;
-  background: url("/hello_git/assets/img/slider/slider1.jpg") top center /
-    cover no-repeat;
+  background: url("../img/slider/slider1.jpg") top center / cover no-repeat;
 }
 #slider .text-content {
   position: absolute;
@@ -198,44 +197,39 @@ html {
   margin-top: -3px;
 }
 /* Places */
-.place-list{
+.place-list {
   margin: 32px -8px 0;
   padding-bottom: 48px;
-  
 }
-.place-item{
+.place-item {
   float: left;
   width: 33.33333%;
   padding: 0 8px;
 }
-.place-img{
+.place-img {
   width: 100%;
   display: block;
-
 }
-.place-img:hover{
+.place-img:hover {
   opacity: 0.6;
 }
-.place-body{
+.place-body {
   font-size: 15px;
   background-color: white;
   padding: 16px;
-
 }
-.place-heading{
+.place-heading {
   font-weight: 600;
-  
-
 }
-.place-time{
-   margin-top: 15px;
-   color: #757575;
+.place-time {
+  margin-top: 15px;
+  color: #757575;
 }
-.place-desc{
+.place-desc {
   margin-top: 15px;
   line-height: 1.4;
 }
-.place-buy-btn{
+.place-buy-btn {
   color: #fff;
   background-color: #000;
   text-decoration: none;
@@ -243,33 +237,38 @@ html {
   display: inline-block;
   margin-top: 15px;
 }
-.place-buy-btn:hover{
-color: #000;
-background-color: #ccc;
+.place-buy-btn:hover {
+  color: #000;
+  background-color: #ccc;
 }
-
 
 #footer {
 }
-.modal{
+/* Modal */
+.modal {
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.4);
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
+}
+.open {
+  display: flex;
 }
 .modal-container {
   background-color: #fff;
   width: 900px;
+  max-width: calc(100% - 32px); /* chỉnh responsive */
   min-height: 200px;
   position: relative;
+  animation: modalFadeIn ease 0.55s;
 }
-.modal-header{
-  background:#009688;
+.modal-header {
+  background: #009688;
   height: 130px;
   display: flex;
   align-items: center;
@@ -277,10 +276,10 @@ background-color: #ccc;
   font-size: 30px;
   color: #fff;
 }
-.modal-heading-icon{
-  margin-right:  16px; ;
+.modal-heading-icon {
+  margin-right: 16px;
 }
-.modal-close{
+.modal-close {
   position: absolute;
   top: 0;
   right: 0;
@@ -289,9 +288,51 @@ background-color: #ccc;
   cursor: pointer;
   opacity: 0.8;
 }
-.modal-close:hover{
+.modal-close:hover {
   opacity: 1;
 }
-.modal-body{
+.modal-body {
   padding: 16px;
+}
+.modal-label {
+  display: block;
+  font-size: 15px;
+  margin-bottom: 12px;
+}
+.modal-input {
+  border: 1px solid #ccc;
+  width: 100%;
+  padding: 10px;
+  font-size: 15px;
+  margin-bottom: 24px;
+}
+#buy-tickets {
+  background: #009688;
+  border: none;
+  color: #fff;
+  width: 100%;
+  font-size: 15px;
+  text-transform: uppercase;
+  padding: 18px;
+  cursor: pointer;
+}
+#buy-tickets:hover {
+  opacity: 0.9;
+}
+.modal-footer {
+  padding: 16px;
+  text-align: right;
+}
+.modal-footer a {
+  color: #2196f3;
+}
+@keyframes modalFadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-140px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
