--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,12 +18,63 @@ html {
 3. Màu sắc
 4. Kiểu dáng (kiểu chữ, hình tròn, vuông,...)
  */
+/* Common */
 .clear {
   clear: both;
 }
 .text-white {
   color: white !important;
 }
+.text-center {
+  text-align: center !important;
+}
+.row {
+  margin-left: -8px;
+  margin-right: -8px;
+}
+.row::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.col {
+  float: left;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+.col-third {
+  width: 33.33333%;
+}
+.col-half {
+  width: 50%;
+}
+.col-full {
+  width: 100%;
+}
+.mt-8 {
+  margin-top: 8px !important;
+}
+.mt-16 {
+  margin-top: 16px !important;
+}
+.pull-right {
+  float: right !important;
+}
+.btn {
+  color: #fff;
+  background-color: #000;
+  text-decoration: none;
+  padding: 11px 16px;
+  display: inline-block;
+  margin-top: 15px;
+  cursor: pointer;
+  border: none;
+}
+.btn:hover {
+  color: #000;
+  background-color: #ccc;
+}
+/* Main */
 #main {
 }
 #header {
@@ -126,7 +177,7 @@ html {
 }
 #content .content-section {
   width: 800px;
-  padding: 64px 0;
+  padding: 64px 0 112px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -151,11 +202,7 @@ html {
 #content .member-list {
   margin-top: 48px;
 }
-#content .member-item {
-  float: left;
-  width: 33.33333%;
-  text-align: center;
-}
+
 #content .member-name {
   font-size: 15px;
 }
@@ -198,14 +245,9 @@ html {
 }
 /* Places */
 .place-list {
-  margin: 32px -8px 0;
-  padding-bottom: 48px;
+  margin-top: 32px;
 }
-.place-item {
-  float: left;
-  width: 33.33333%;
-  padding: 0 8px;
-}
+
 .place-img {
   width: 100%;
   display: block;
@@ -229,20 +271,61 @@ html {
   margin-top: 15px;
   line-height: 1.4;
 }
-.place-buy-btn {
-  color: #fff;
-  background-color: #000;
-  text-decoration: none;
-  padding: 11px 16px;
-  display: inline-block;
-  margin-top: 15px;
-}
-.place-buy-btn:hover {
-  color: #000;
-  background-color: #ccc;
-}
 
+/* Contact Form */
+.contact-content {
+  margin-top: 48px;
+}
+.contact-info {
+  font-size: 18px;
+  line-height: 1.5;
+}
+.contact-info i[class*="ti-"] {
+  width: 30px;
+  display: inline-block;
+}
+.contact-form {
+  font-size: 15px;
+}
+.contact-form .form-control {
+  padding: 10px;
+  border: 1px solid #ccc;
+  width: 100%;
+}
+.contact-form .form-submit-btn {
+  background: #000;
+  color: #fff;
+  border: 1 px solid #000;
+  padding: 10px 16px;
+  float: right;
+}
+/* Map Section */
+.map-section img {
+  width: 100%;
+}
+/* Footer Section */
 #footer {
+  padding: 64px 16px;
+  text-align: center;
+}
+#footer .social-list {
+  font-size: 24px;
+}
+#footer .social-list a {
+  color: rgba(0, 0, 0, 0.6);
+  text-decoration: none;
+}
+#footer .copyright a:hover,
+#footer .social-list a:hover {
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.4);
+}
+#footer .copyright{
+  margin-top: 15px;
+  color: rgba(0, 0, 0, 0.6);
+}
+#footer .copyright a{
+  color: rgba(0, 0, 0, 0.6);
 }
 /* Modal */
 .modal {
