update responsive Tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 }
 html {
   font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
 /* 
 1. Làm từ ngoài vào trong
@@ -85,6 +86,7 @@ html {
   height: 46px;
   background-color: black;
   z-index: 1;
+  overflow: hidden;
 }
 #nav {
   display: inline-block;
@@ -139,14 +141,25 @@ html {
 #nav-arrow-down {
   font-size: 14px;
 }
+#header .mobile-menu-btn,
 #header .search-btn {
   float: right;
   padding: 0 21px;
 }
+
 #header .search-btn:hover {
   background-color: #f44336;
   cursor: pointer;
 }
+#header .mobile-menu-btn:hover {
+  background-color: #ccc;
+}
+
+#header .mobile-menu-btn:hover .menu-icon {
+  color: #000;
+}
+
+#header .menu-icon,
 #header .search-icon {
   color: white;
   font-size: 20px;
@@ -177,9 +190,12 @@ html {
 }
 #content .content-section {
   width: 800px;
+  max-width: 100%;
   padding: 64px 0 112px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 #content .section-heading {
   font-weight: 500;
@@ -320,11 +336,11 @@ html {
   cursor: pointer;
   color: rgba(0, 0, 0, 0.4);
 }
-#footer .copyright{
+#footer .copyright {
   margin-top: 15px;
   color: rgba(0, 0, 0, 0.6);
 }
-#footer .copyright a{
+#footer .copyright a {
   color: rgba(0, 0, 0, 0.6);
 }
 /* Modal */
