--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,9 @@ html {
 .mt-16 {
   margin-top: 16px !important;
 }
+.mt-32 {
+  margin-top: 32px !important;
+}
 .pull-right {
   float: right !important;
 }
@@ -70,6 +73,7 @@ html {
   margin-top: 15px;
   cursor: pointer;
   border: none;
+  text-align: center;
 }
 .btn:hover {
   color: #000;
@@ -223,7 +227,7 @@ html {
   line-height: 1.4;
 }
 #content .member-list {
-  margin-top: 48px;
+  margin-top: 32px;
 }
 
 #content .member-name {
@@ -268,7 +272,7 @@ html {
 }
 /* Places */
 .place-list {
-  margin-top: 32px;
+  margin-top: 16px;
 }
 
 .place-img {
@@ -306,6 +310,13 @@ html {
 .contact-info i[class*="ti-"] {
   width: 30px;
   display: inline-block;
+}
+.contact-info a {
+  color: #101aef;
+  opacity: 0.8;
+}
+.contact-info a:hover{
+  opacity: 1;
 }
 .contact-form {
   font-size: 15px;
